src/test/ui/impl-trait/issue-67166.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-67166.rs:7:31
   |
LL |     let _foo: Box<impl Copy + '_> = Box::new(());
   |                               ^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | pub fn run<'a>() {
LL |     let _foo: Box<impl Copy + 'a> = Box::new(());
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
